docs/versioned_docs/version-1.10.0/Develop/memory.mdx
---
title: Memory management options
slug: /memory
---

EarthMind provides flexible memory management options for storage and retrieval of data relevant to your flows and your EarthMind server.
This includes essential EarthMind database tables, file management, and caching, as well as chat memory.

## Storage options and paths

EarthMind supports both local memory and external memory options.

EarthMind's default storage option is a [SQLite](https://www.sqlite.org/) database.
The default storage path depends on your operating system and installation method:

- **EarthMind Desktop**:
    - **macOS**: `/Users/<username>/.earthmind/data/database.db`
    - **Windows**: `C:\Users\<name>\AppData\Roaming\com.EarthMindDesktop\data\database.db`
- **EarthMind OSS**
    - **macOS/Windows/Linux/WSL with `uv pip install`**: `<path_to_venv>/lib/python3.12/site-packages/earthmind/earthmind.db` (Python version can vary. Database isn't shared between virtual environments because it is tied to the venv path.)
    - **macOS/Windows/Linux/WSL with `git clone`**: `<path_to_clone>/src/backend/base/earthmind/earthmind.db`

EarthMind offers a few alternatives to the default database path:

* **Config directory**: Set `EARTHMIND_SAVE_DB_IN_CONFIG_DIR=True` to store the database in your EarthMind config directory as set in [`EARTHMIND_CONFIG_DIR`](/logging).

* **External PostgreSQL database**: You can use an external PostgreSQL database for all of your EarthMind storage.
For more information, see [Configure external memory](#configure-external-memory)

    External storage can be useful if you want to preserve the data after uninstalling EarthMind or to share the same database between multiple virtual environments.

* **Separate chat memory**: You can selectively use external storage for chat memory only, separate from other EarthMind storage.
For more information, see [Store chat memory](#store-chat-memory).

* **No database**: To disable all database operations and run a no-op session, set `EARTHMIND_USE_NOOP_DATABASE=True` in your [EarthMind environment variables](/environment-variables).
This is useful for testing when you don't want to persist any data.

## EarthMind database tables

The following tables are stored in `earthmind.db`:

• **ApiKey**: Manages EarthMind API authentication keys. Component API keys are stored in the **Variables** table. For more information, see [API keys and authentication](/api-keys-and-authentication).

• **Deployment**: Tracks deployments of EarthMind flows to external providers, including the deployment name, provider resource key, and associated project and provider account.

• **DeploymentProviderAccount**: Stores configured connections to external deployment providers, including provider URL, tenant settings, and encrypted credentials.

• **File**: Stores metadata for files uploaded to EarthMind's file management system, including file names, paths, sizes, and storage providers. For more information, see [Manage files](/concepts-file-management).

• **Flow**: Contains flow definitions, including nodes, edges, and components, stored as JSON or database records. For more information, see [Build flows](/concepts-flows).

    :::tip
    To automatically remove API keys and tokens from flow data before saving a flow to the database, set `EARTHMIND_REMOVE_API_KEYS=True` in your [EarthMind environment variables](/environment-variables).
    When `true`, any field marked as a password field that _also_ has `api`, `key`, or `token` in its name is set to `null` before the flow is saved.
    This helps prevent credentials from being stored in the database.
    :::

• **FlowVersion**: Stores numbered snapshots of flow definitions, enabling version history. Each row captures a complete flow data snapshot linked to a flow and identified by a sequential version number. For more information, see [Save and restore flow versions](/concepts-flows#save-and-restore-flow-versions).

• **FlowVersionDeploymentAttachment**: Links specific flow versions to provider deployments, tracking which flow version is deployed where and the provider's opaque snapshot identifier for that version.

• **Folder**: Provides a structure for flow storage, including single-user folders and shared folders accessed by multiple users. For more information, see [Manage flows in projects](/concepts-flows#projects).

• **IngestionRun**: Records knowledge base ingestion run history, including aggregate counters (chunks created, bytes processed, files succeeded/failed/skipped) and per-file outcome details for each ingestion job. For more information, see [Knowledge bases](/knowledge-base).

• **Job**: Background job queue for asynchronous tasks including flow workflow execution and knowledge base ingestion. Tracks job type (`workflow`, `ingestion`, `evaluation`), status (`queued`, `in_progress`, `completed`, `failed`), timestamps, and per-job progress metadata.

• **KnowledgeBase**: Stores knowledge base configurations, including the embedding model, chunking settings, backend type, status, and cached statistics (chunk count, word count, total size). For more information, see [Knowledge bases](/knowledge-base).

• **MemoryBase**: Stores memory base configurations for flows, including the associated knowledge base name, embedding model, auto-capture threshold, and optional preprocessing settings.

• **MemoryBasePreprocessingOutput**: Captures LLM-distilled preprocessing output before knowledge base writes. Each row represents one preprocessing batch and tracks the status (`processed`, `ingested`, or `skipped`) to support resumable two-phase commit (LLM call → knowledge base write).

• **MemoryBaseSession**: Tracks per-session state for each memory base, including the sync cursor position and total count of processed messages.

• **MemoryBaseWorkflowRun**: Records workflow job runs per memory base and session to support threshold-based ingestion, linking each workflow job to its resulting ingestion job.

• **Message**: Stores chat messages and interactions that occur between components. For more information, see [Message objects](/data-types#message) and [Store chat memory](#store-chat-memory).

• **MessageIngestionRecord**: Records which messages have been ingested into a memory base and by which job. Serves as a join table between messages and memory bases, ensuring each message is not re-ingested.

• **Trace** and **Span**: Stores traces and spans for flows and components. For more information, see [Traces](/traces).

• **Transactions**: Records execution history and results of flow runs. This information is used for [logging](/logging).

• **User**: Stores user account information including credentials, permissions, profiles, and user management settings. For more information, see [API keys and authentication](/api-keys-and-authentication).

• **Variables**: Stores global encrypted values and credentials. For more information, see [Global variables](/configuration-global-variables) and [Component API keys](/api-keys-and-authentication#component-api-keys).

• **VertexBuild**: Tracks the build status of individual nodes within flows. For more information, see [Test flows in the Playground](/concepts-playground).

For more information, see the database models in the [source code](https://github.com/earthmind-ai/earthmind/tree/main/src/backend/base/earthmind/services/database/models).

## Configure external memory {#configure-external-memory}

To replace the default EarthMind SQLite database with another database, set the `EARTHMIND_DATABASE_URL` environment variable to your database URL, and then start EarthMind with your `.env` file.
For more information and examples, see [Configure an external PostgreSQL database](/configuration-custom-database).

```text
EARTHMIND_DATABASE_URL=postgresql://user:password@localhost:5432/earthmind
```

To fine-tune your database connection pool and timeout settings, you can set the following additional environment variables:

* `EARTHMIND_DATABASE_CONNECTION_RETRY`: Whether to retry lost connections to your EarthMind database. If `true`, EarthMind tries to connect to the database again if the connection fails. Default: `false`.

* `EARTHMIND_DB_CONNECT_TIMEOUT`: The number of seconds to wait before giving up on a lock to be released or establishing a connection to the database. This may be separate from the `pool_timeout` in `EARTHMIND_DB_CONNECTION_SETTINGS`. Default: 30.

* `EARTHMIND_MIGRATION_LOCK_NAMESPACE`: Optional namespace identifier for PostgreSQL advisory lock during migrations. If not provided, a hash of the database URL will be used. Useful when multiple EarthMind instances share the same database and need coordinated migration locking

* `EARTHMIND_DB_CONNECTION_SETTINGS`: A JSON dictionary containing the following database connection pool settings:

    - `pool_size`: The base number of connections to keep open in the connection pool. Default: 20.
    - `max_overflow`: Maximum number of connections that can be created in excess of `pool_size` if needed. Default: 30.
    - `pool_timeout`: Number of seconds to wait for a connection from the pool before timing out. Default: 30.
    - `pool_pre_ping`: If `true`, the pool tests connections for liveness upon each checkout. Default: `true`.
    - `pool_recycle`: Number of seconds after which a connection is automatically recycled. Default: 1800 (30 minutes).
    - `echo`: If `true`, SQL queries are logged for debugging purposes. Default: `false`.

    For example:

    ```text
    EARTHMIND_DB_CONNECTION_SETTINGS='{"pool_size": 20, "max_overflow": 30, "pool_timeout": 30, "pool_pre_ping": true, "pool_recycle": 1800, "echo": false}'
    ```

    Don't use the deprecated environment variables `EARTHMIND_DB_POOL_SIZE` or `EARTHMIND_DB_MAX_OVERFLOW`.
    Instead, use `pool_size` and `max_overflow` in `EARTHMIND_DB_CONNECTION_SETTINGS`.

* `EARTHMIND_MIGRATION_LOCK_NAMESPACE`: Optional namespace for PostgreSQL advisory locks used during database migrations. This is useful when running multiple EarthMind instances that share the same PostgreSQL database. Each instance should use a unique namespace to avoid conflicts. If not set, EarthMind uses a default namespace. This setting only applies when using PostgreSQL as your database backend.

## Configure cache memory

The default EarthMind caching behavior is an asynchronous, in-memory cache:

```text
EARTHMIND_LANGCHAIN_CACHE=InMemoryCache
EARTHMIND_CACHE_TYPE=async
```

EarthMind officially supports only the default asynchronous, in-memory cache, which is suitable for most use cases.
Other cache options, such as Redis, are experimental and can change without notice.
If you want to use a non-default cache setting, you can use the following environment variables:

| Variable | Type | Default | Description |
|----------|------|---------|-------------|
| `EARTHMIND_CACHE_TYPE` | String | `async` | Set the cache type for EarthMind's internal caching system. Possible values: `async`, `redis`, `memory`. If you set the type to `redis`, then you must also set the `EARTHMIND_REDIS_*` environment variables. The `disk` backend was removed in 1.10 — switch to `async` for in-memory or `redis` for cross-worker. |
| `EARTHMIND_LANGCHAIN_CACHE` | String | `InMemoryCache` | Set the cache storage type for the LangChain caching system (a EarthMind dependency), either `InMemoryCache` or `SQLiteCache`. |
| `EARTHMIND_REDIS_HOST` | String | `localhost` | Redis server hostname if `EARTHMIND_CACHE_TYPE=redis`. |
| `EARTHMIND_REDIS_PORT` | Integer | `6379` | Redis server port if `EARTHMIND_CACHE_TYPE=redis`. |
| `EARTHMIND_REDIS_DB` | Integer | `0` | Redis database number if `EARTHMIND_CACHE_TYPE=redis`. |
| `EARTHMIND_REDIS_CACHE_EXPIRE` | Integer | `3600` | Cache expiration time in seconds if `EARTHMIND_CACHE_TYPE=redis`. |
| `EARTHMIND_REDIS_PASSWORD` | String | Not set | Optional password for Redis authentication if `EARTHMIND_CACHE_TYPE=redis`. |

## Store chat memory

Chat-based flows with a **Chat Input** or **Chat Output** component produce chat history that is stored in the EarthMind `messages` table.
At minimum, this serves as a chat log, but it isn't functionally the same as chat memory that provides historical context to an LLM.

To store and retrieve chat memories in flows, you can use a **Message History** component or the **Agent** component's built-in chat memory.

<details>
<summary>How does chat memory work?</summary>

Chat memory is a cache for an LLM or agent to preserve past conversations to retain and reference that context in future interactions.
For example, if a user has already told the LLM their name, the LLM can retrieve that information from chat memory rather than asking the user to repeat themselves in future conversations or messages.

Chat memory is distinct from vector store memory because it is built specifically for storing and retrieving chat messages from databases.

Components that support chat memory (such as the **Agent** and **Message History** components) provide access to their respective databases _as memory_.
Retrieval as memory is an important distinction for LLMs and agents because this storage and retrieval mechanism is specifically designed to recall context from past conversations.
Unlike vector stores, which are designed for semantic search and retrieval of text chunks, chat memory is designed to store and retrieve chat messages in a way that is optimized for conversation history.

</details>

### Session ID and chat memory

Chat history and memories are grouped by [session ID (`session_id`)](/session-id).

The default session ID is the flow ID, which means that all chat messages for a flow are stored under the same session ID as one large chat session.

For better segregation of chat memory, especially in flows used by multiple users, consider using custom session IDs.
For example, if you use user IDs as session IDs, then each user's chat history is stored separately, isolating the context of their chats from other users' chats.

### Chat memory options

Where and how chat memory is stored depends on the components used in your flow:

* **Agent component**: This component has built-in chat memory that is enabled by default.
This memory allows the agent to retrieve and reference messages from previous conversations associated with the same session ID.
All messages are stored in [EarthMind storage](#storage-options-and-paths), and the component provides minimal memory configuration options, such as the number of messages to retrieve.

    The **Agent** component's built-in chat memory is sufficient for most use cases.

    If you want to use external chat memory storage, retrieve memories outside the context of a chat, or use chat memory with a language model component (not an agent), you must use the **Message History** component (with or without a third-party chat memory component).

* **Message History component**: By default, this component stores and retrieves memories from EarthMind storage, unless you attach a third-party chat memory component. It provides a few more options for sorting and filtering memories, although most of these options are also built-in to the **Agent** component as configurable or fixed parameters.

    You can use the **Message History** component with or without a language model or agent.
    For example, if you need to retrieve data from memories outside of chat, you can use the **Message History** component to fetch that data directly from your chat memory database without feeding it into a chat.

* **Third-party chat memory components**: Use one of these components only if you need to store or retrieve chat memories from a dedicated external chat memory database.
Typically, this is necessary only if you have specific storage needs that aren't met by EarthMind storage.
For example, if you want to manage chat memory data by directly working with the database, or if you want to use a different database than the default EarthMind storage.

For more information and examples, see [**Message History** component](/message-history) and [Agent memory](/agents#agent-memory).

## See also

* [EarthMind file management](/concepts-file-management)
* [EarthMind logs](/logging)
* [EarthMind environment variables](/environment-variables)